Fixed weird whitespace bugs

--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 html {
   position: relative;
@@ -27,7 +35,7 @@ min-height: 98%;
 }
 
 .iconDetails {
- margin-left:25%;
+ margin-left:10%;
  margin-right:2%;
 float:left; 
 height:256px;
